--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,18 +23,8 @@
 .pl0 {padding-left: 0px;}
 .fancybox-overlay { z-index: 10051 !important; }
 #fancybox-loading { z-index: 10051 !important; }
-/* End Toolkit
---------------------------------------------------------------------------------------------------*/
+a {color: #243374;}
 
-/* =Normalization - mostly derived from normalize.css (https://github.com/necolas/normalize.css/) but without comments and compressed to keep the file small
---------------------------------------------------------------------------------------------------*/
-
-.user-package input[type="text"]{ color:#010101; font-size:16px; line-height:20px; font-family: 'Oswald', sans-serif; font-weight:300; border-top:2px solid #fff; border-left:2px solid #fff; border-right:2px solid #fff; border-bottom:2px solid #000000; padding:7px 10px;}
-.user-package input[type="text"]:focus{ border:2px solid #000000;}
-.user-package input[type="submit"]:focus{ background:#2F292B;}
-html { -webkit-text-size-adjust: none; }
-.user-package input{ -webkit-appearance:none; border-radius:0;}
-.user-package input, .user-package input:before, .user-package input:after { box-sizing: border-box; margin: 0; padding: 0;}
 /* End Normalization
 --------------------------------------------------------------------------------------------------*/
 
@@ -78,39 +68,8 @@ html { -webkit-text-size-adjust: none; }
     font-style: normal;
 }
 
-
-/* Setting up the fonts */
-
-/* End Typography
---------------------------------------------------------------------------------------------------*/
-
-
-/* Headings
---------------------------------------------------------------------------------------------------*/
-.user-package h1 { color:#fff; text-transform:uppercase; font-size:56px; line-height:70px; font-weight:700; text-align:center; border-bottom:3px solid #fff; padding:0 0 55px; margin:0 0 55px;}
-.user-package h2 { font-size:56px; line-height:70px; font-weight:700; text-transform:uppercase; text-align:center; color:#fff; border-bottom:4px solid #578ebe; padding:0 0 50px; margin:0 0 50px;}
-.user-package h3 { font-size:44px; line-height:50px; color:#578ebe;}
-.user-package h4 { font-size:42px; line-height:54px; color:#578ebe; text-transform:uppercase; font-weight:400; margin:0 0 40px;}
-.user-package h5 { }
-.user-package h6 { }
-
-
-/* Links
---------------------------------------------------------------------------------------------------*/
-.user-package a { text-decoration: none; color: #000; cursor: pointer !important; -webkit-transition: all 0.5s ease; -moz-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease;}
-
-.user-package a:hover { }
-
-
 /* Branding
 --------------------------------------------------------------------------------------------------*/
-.user-package p { padding: 0 0 45px 0; margin: 0; font-family: 'Oswald', sans-serif; font-weight:300; font-size:37px; line-height:44px; color:#010101; text-transform:uppercase;}
-.user-package ul{ margin:0 0 20px;}
-.user-package ul li{ font-size:30px; line-height:44px; background:url(../images/list-icon.png) no-repeat 0 20px; padding:0 0 0 15px;}
-html, body { }
-.user-package *{ font-family: 'Oswald', sans-serif;}
-.user-package{ background:#0e0e0e; padding:10px;}
-
 .portlet-body .view_next{ display: none; height: 30px; margin-top: -15px; position: absolute; right: 20px; top: 50%; width: 30px; z-index: 9;}
 .portlet-body .view_pre{ display: none; height: 30px; margin-top: -15px; position: absolute; left: 20px; top: 50%; width: 30px; z-index: 9;}
 .portlet-body .view_next i, .portlet-body .view_pre i{ font-size: 30px; line-height: 30px;}
