--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -607,3 +607,5 @@ span.span_pro{
 .btn.default {   
     background-color:#d2cfcf;    
 }
+
+.line-item-img{border: 3px solid #ddd; border-radius: 6px !important;}
